# eco_impact

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  setup.sh
apps/api/: README.md  alembic.ini  fetch_initial_data.py  package.json  prefect.yaml  pyproject.toml  seed.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250330_0001_initial_schema.py
apps/api/app/: __init__.py  deps.py  main.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  tables.py
apps/api/app/routers/: __init__.py  carbon.py  dashboard.py  impact.py  reports.py
apps/api/app/schemas/: carbon.py  dashboard.py  impact.py  reports.py
apps/api/app/services/: __init__.py  carbon_constants.py  electricity_maps.py  http_retry.py  impact_calculator.py  redis_cache.py  watttime.py
apps/api/data/hardware/: gpus.json
apps/api/data/sustainability/: amazon.json  google.json  meta.json  microsoft.json
apps/api/pipelines/: __init__.py
apps/api/pipelines/flows/: __init__.py  carbon_intensity.py  gpu_benchmarks.py  model_updates.py  sustainability_reports.py
apps/api/pipelines/lib/: __init__.py  dea_scores.py  paths.py  sustainability_io.py  yoy.py
apps/api/pipelines/services/: __init__.py  model_sources.py
apps/web/: drizzle.config.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/components/: dashboard-sidebar.tsx
apps/web/db/: schema.ts
apps/web/lib/: chart-palette.ts  chart-utils.ts  dashboard-mocks.ts  dashboard-queries.ts  eco-badge.ts  queries.ts  (+2 more)
(+29 files in other folders)
