[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "pipelines"]

[project]
name = "eco-impact-api"
version = "0.1.0"
description = "FastAPI backend for eco-impact-dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "pydantic>=2.10",
    "prefect>=3.1",
    "httpx>=0.28",
    "pandas>=2.2",
    "redis>=5.2",
    "alembic>=1.14",
    "python-dotenv",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"
